--- a/runtime/index.Rmd
+++ b/runtime/index.Rmd
@@ -100,6 +100,10 @@ Removed Steps
 ```{r, child='pages/page3_twoDPlot.Rmd'}
 ```
 
+3D Plot {data-orientation=columns}
+=====================================
+```{r, child='pages/page3_2_threeDPlot.Rmd'}
+```
 
 Target Steps
 =====================================
