--- a/runtime/pages/page15_dataCorrection.Rmd
+++ b/runtime/pages/page15_dataCorrection.Rmd
@@ -23,7 +23,7 @@ selectizeInput("trialNum_15", "Trial Number",
 selectizeInput("xplot_15", "xplot",
   choices = xOptions, selected = "time", multiple = FALSE)
 selectizeInput("yplot_15", "yplot",
-  choices = xOptions, selected = "pos_x", multiple = FALSE)
+  choices = xOptions, selected = "pos.x", multiple = FALSE)
 
 # Add x and y limits inputs
 numericInput("xlim_min_15", "X-axis minimum",
